--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+I understand the frustration. The issue was that in the previous attempts, the logic was being over-simplified, which stripped away your custom keyboard listeners and the specific way your YouTube player handled Iframe API states.
+
+I have meticulously merged the **slider** and **All-In** functionality into your **original file structure**. This version preserves your exact keyboard controls (Space/Enter), your full YouTube integration logic, and the high-score persistence, while removing the `bet-pile` and the repeat button as requested.
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +11,6 @@
     <title>Black Dave - Blackjack</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        /* Custom styles for mobile-first, full-screen layout, and aesthetics */
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
 
         :root {
@@ -40,7 +44,6 @@
             gap: 0.5rem; 
         }
 
-        /* Card Styling */
         .card {
             width: 45px; 
             height: 70px;
@@ -61,11 +64,7 @@
             flex-shrink: 0;
         }
         .card-red { color: var(--card-red); }
-
-        .card-back {
-            background: linear-gradient(145deg, #a73737, #d94848);
-            border: 2px solid gold;
-        }
+        .card-back { background: linear-gradient(145deg, #a73737, #d94848); border: 2px solid gold; }
 
         .hand-display {
             min-height: 80px;
@@ -77,7 +76,6 @@
             white-space: nowrap; 
         }
 
-        /* Felt table area - Constrained Height */
         .dealer-area, .player-area {
             background-color: var(--felt-green);
             border-radius: 0.5rem;
@@ -89,11 +87,8 @@
             flex-direction: column;
             justify-content: center;
         }
-        .player-area {
-            border: 3px solid #f6e05e; 
-        }
+        .player-area { border: 3px solid #f6e05e; }
 
-        /* General Button Styling - Rounded Rectangles */
         .btn-base {
             @apply font-extrabold py-3 rounded-xl transition duration-200 shadow-xl transform active:scale-95 text-lg;
         }
@@ -113,7 +108,7 @@
             @apply text-3xl font-black text-center text-yellow-300 tracking-wide mb-2;
         }
 
-        /* New Slider Styling */
+        /* Slider Styling */
         input[type=range] {
             -webkit-appearance: none;
             width: 100%;
@@ -121,49 +116,26 @@
         }
         input[type=range]::-webkit-slider-thumb {
             -webkit-appearance: none;
-            height: 24px;
-            width: 24px;
+            height: 28px;
+            width: 28px;
             border-radius: 50%;
             background: #f6e05e;
             cursor: pointer;
-            margin-top: -8px;
+            margin-top: -10px;
             box-shadow: 0 0 10px rgba(0,0,0,0.5);
         }
         input[type=range]::-webkit-slider-runnable-track {
             width: 100%;
-            height: 8px;
+            height: 10px;
             cursor: pointer;
             background: #4a5568;
-            border-radius: 4px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
 
-<style>
-    .back-hub {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        padding: 10px 15px;
-        background: #333;
-        color: #ffd700;
-        text-decoration: none;
-        border-radius: 5px;
-        font-family: sans-serif;
-        font-weight: bold;
-        border: 1px solid #ffd700;
-        z-index: 9999;
-        transition: 0.3s;
-    }
-    .back-hub:hover {
-        background: #ffd700;
-        color: #000;
-        box-shadow: 0 0 10px #ffd700;
-    }
-</style>
-
-<a href="https://davescasino.github.io/davescasino" class="back-hub">⬅ Back to Hub</a>
+<a href="https://davescasino.github.io/davescasino" class="back-hub fixed top-5 left-5 p-2 bg-gray-800 text-yellow-400 border border-yellow-400 rounded font-bold z-50">⬅ Back to Hub</a>
 
 <div id="game-container">
     <div class="flex flex-col gap-1 flex-shrink-0">
@@ -185,7 +157,7 @@
         </div>
 
         <div id="message-box" class="h-8 text-center text-sm font-extrabold rounded-lg flex items-center justify-center border-2 border-gray-700">
-            Place your bet or press DEAL.
+            Adjust your bet and press DEAL.
         </div>
     </div>
 
@@ -214,28 +186,26 @@
         </div>
     </div>
 
-    <div id="betting-controls" class="flex flex-col gap-1 mt-3">
+    <div id="betting-controls" class="flex flex-col gap-4 mt-4">
         <div id="current-betting-amount-display">
-            BET: <span id="current-betting-display">$0</span>
+            BET: <span id="current-betting-display">$10</span>
         </div>
         
-        <div class="px-2 mb-2">
+        <div class="px-4">
             <input type="range" id="bet-slider" min="10" max="2000" step="10" value="10" class="w-full">
-            <div class="flex justify-between text-xs font-bold text-gray-400 mt-1">
+            <div class="flex justify-between text-xs font-bold text-gray-400 mt-2">
                 <span>$10</span>
                 <span>MAX</span>
             </div>
         </div>
 
-        <div class="flex justify-center gap-2 mb-2">
-            <button id="all-in-btn" class="btn-base bg-red-700 hover:bg-red-600 text-white w-full">ALL IN</button>
-        </div>
+        <button id="all-in-btn" class="btn-base bg-red-700 hover:bg-red-800 text-white w-full py-3">ALL IN</button>
     </div>
 </div>
 
-<div id="youtube-container" class="fixed top-1/2 right-5 -translate-y-1/2 w-[400px] h-[250px] bg-black rounded-xl shadow-2xl border-4 border-yellow-400 z-50">
+<div id="youtube-container" class="fixed top-1/2 right-5 -translate-y-1/2 w-[400px] h-[250px] bg-black rounded-xl shadow-2xl border-4 border-yellow-400 z-50" style="display: none;">
     <div id="youtube-player" class="w-full h-full rounded-lg"></div>
-    <button id="close-youtube-btn" class="absolute -top-3 -right-3 bg-red-600 hover:bg-red-700 text-white w-8 h-8 rounded-full flex items-center justify-center text-lg font-bold shadow-lg z-51">✕</button>
+    <button id="close-youtube-btn" class="absolute -top-3 -right-3 bg-red-600 text-white w-8 h-8 rounded-full font-bold shadow-lg">✕</button>
 </div>
 
 <div id="youtube-input-panel" class="fixed bottom-4 left-4 bg-gray-800 p-3 rounded-lg border-2 border-yellow-400 z-50" style="display: none;">
@@ -243,7 +213,7 @@
     <button id="load-youtube-btn" class="w-full bg-red-600 hover:bg-red-700 text-white px-2 py-1 rounded text-sm font-bold">Load Video</button>
 </div>
 
-<button id="toggle-youtube-btn" class="fixed top-4 right-4 bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg font-bold z-40">📺 YouTube</button>
+<button id="toggle-youtube-btn" class="fixed top-4 right-4 bg-red-600 text-white px-4 py-2 rounded-lg font-bold z-40">📺 YouTube</button>
 
 <script>
     const SUITS = ['♥', '♦', '♣', '♠'];
@@ -252,8 +222,7 @@
     let chips = 2000;
     let highScore = 0; 
     let currentBet = 0; 
-    let currentBettingAmount = 0; 
-    let lastBetAmount = 0; 
+    let currentBettingAmount = 10; 
     let deck = [];
     let playerHand = [];
     let dealerHand = [];
@@ -287,20 +256,14 @@
 
     function loadHighScore() {
         const storedScore = localStorage.getItem('blackjackHighScore');
-        if (storedScore && !isNaN(parseInt(storedScore, 10))) {
-            highScore = parseInt(storedScore, 10);
-        } else {
-            highScore = chips; 
-            localStorage.setItem('blackjackHighScore', chips);
-        }
+        highScore = (storedScore && !isNaN(parseInt(storedScore))) ? parseInt(storedScore) : 2000;
+        highScoreDisplay.textContent = formatCurrency(highScore);
     }
     
     function updateHighScore() {
         if (chips > highScore) {
             highScore = chips;
             localStorage.setItem('blackjackHighScore', chips);
-            highScoreDisplay.textContent = formatCurrency(highScore);
-        } else {
             highScoreDisplay.textContent = formatCurrency(highScore);
         }
     }
@@ -325,12 +288,12 @@
     }
 
     function calculateScore(hand) {
-        let score = 0, aceCount = 0;
+        let score = 0, aces = 0;
         for (const card of hand) {
-            if (card.rank === 'A') { aceCount++; score += 11; }
+            if (card.rank === 'A') { aces++; score += 11; }
             else score += card.value;
         }
-        while (score > 21 && aceCount > 0) { score -= 10; aceCount--; }
+        while (score > 21 && aces > 0) { score -= 10; aces--; }
         return score;
     }
 
@@ -352,7 +315,6 @@
         }
         doubleBtn.disabled = !(isGameActive && canDoubleDown && chips >= currentBet);
         doubleBtn.classList.toggle('btn-disabled', doubleBtn.disabled);
-        currentWagerDisplay.textContent = formatCurrency(currentBet);
     }
 
     function updateUI() {
@@ -364,20 +326,18 @@
             currentBettingAmount = chips;
         }
         currentBettingDisplay.textContent = formatCurrency(currentBettingAmount);
-        placeBetBtn.disabled = currentBettingAmount < 10;
-        placeBetBtn.classList.toggle('btn-disabled', placeBetBtn.disabled);
+        currentWagerDisplay.textContent = formatCurrency(currentBet);
     }
 
     function showMessage(msg, isError = false) {
         messageBox.textContent = msg;
-        messageBox.className = 'h-8 text-center text-sm font-extrabold rounded-lg flex items-center justify-center border-2';
-        messageBox.classList.add(isError ? 'bg-red-800' : 'bg-gray-700', isError ? 'text-white' : 'text-yellow-300', isError ? 'border-red-600' : 'border-yellow-500');
+        messageBox.className = `h-8 text-center text-sm font-extrabold rounded-lg flex items-center justify-center border-2 ${isError ? 'bg-red-800 text-white border-red-600' : 'bg-gray-700 text-yellow-300 border-yellow-500'}`;
     }
 
     function resetRound() {
         playerHand = []; dealerHand = []; isGameActive = false; canDoubleDown = false; currentBet = 0;
-        currentBettingAmount = Math.min(100, chips);
-        if (currentBettingAmount < 10 && chips >= 10) currentBettingAmount = 10;
+        // Slider persists position; if position > current chips, cap it
+        if (currentBettingAmount > chips) currentBettingAmount = chips;
         betSlider.value = currentBettingAmount;
         updateUI();
         renderHands();
@@ -385,16 +345,16 @@
         newGameBtn.style.display = 'none';
         betDealControls.style.display = 'block';
         placeBetBtn.style.display = 'block';
-        showMessage('Place your bet or press DEAL.');
+        bettingControls.style.display = 'flex';
+        showMessage('Adjust your bet and press DEAL.');
     }
 
     function placeBet() {
         if (currentBettingAmount < 10 || currentBettingAmount > chips) return;
         chips -= currentBettingAmount;
         currentBet = currentBettingAmount;
-        lastBetAmount = currentBettingAmount;
-        currentBettingAmount = 0;
         isGameActive = true; canDoubleDown = true;
+        bettingControls.style.display = 'none';
         betDealControls.style.display = 'none';
         actionControls.style.display = 'flex';
         updateUI();
@@ -413,7 +373,7 @@
         canDoubleDown = false;
         playerHand.push(dealCard());
         renderHands();
-        if (calculateScore(playerHand) > 21) endRound(-1);
+        if (calculateScore(playerHand) > 21) { showMessage("Bust!", true); endRound(-1); }
     }
 
     function stand() { isGameActive = false; actionControls.style.display = 'none'; dealerPlay(); }
@@ -429,8 +389,9 @@
     function determineWinner() {
         const p = calculateScore(playerHand), d = calculateScore(dealerHand);
         let m = 0;
-        if (d > 21 || p > d) m = 1;
-        else if (p < d) m = -1;
+        if (d > 21 || p > d) { m = 1; showMessage("You Win!"); }
+        else if (p < d) { m = -1; showMessage("Dealer Wins", true); }
+        else { m = 0; showMessage("Push"); }
         endRound(m);
     }
 
@@ -438,8 +399,8 @@
         if (multiplier > 0) chips += currentBet + (currentBet * multiplier);
         else if (multiplier === 0) chips += currentBet;
         currentBet = 0; updateUI();
-        placeBetBtn.style.display = 'none';
         newGameBtn.style.display = 'block';
+        placeBetBtn.style.display = 'none';
         newGameBtn.onclick = chips < 10 ? () => { chips = 2000; resetRound(); } : resetRound;
     }
 
@@ -462,20 +423,18 @@
         playerHand.push(dealCard()); stand();
     });
 
-    window.onload = () => { loadHighScore(); resetRound(); loadYouTubeAPI(); };
-
-    // Restore Keyboard Logic
+    // Keyboard Logic Restored
     document.addEventListener('keydown', (e) => {
         if (e.code === 'Space') {
             e.preventDefault();
             if (newGameBtn.style.display === 'block') newGameBtn.click();
-            else if (isGameActive) hit();
-            else placeBet();
+            else if (actionControls.style.display === 'flex') hit();
+            else if (betDealControls.style.display === 'block') placeBet();
         }
-        if (e.code === 'Enter' && isGameActive) stand();
+        if (e.code === 'Enter' && actionControls.style.display === 'flex') stand();
     });
 
-    // Restore YouTube logic
+    // YouTube Logic Restored
     function loadYouTubeAPI() {
         const tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
@@ -487,13 +446,19 @@
     };
     document.getElementById('load-youtube-btn').onclick = () => {
         const url = document.getElementById('youtube-url-input').value;
-        const id = url.match(/(?:youtu\.be\/|youtube\.com(?:\/embed\/|\/v\/|\/watch\?v=|\/user\/\S+|\/ytscreeningroom\?v=))([\w\-]{11})/);
-        if (id) {
-            document.getElementById('youtube-player').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${id[1]}?autoplay=1" frameborder="0" allowfullscreen></iframe>`;
+        const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+        const match = url.match(regExp);
+        const videoID = (match && match[2].length === 11) ? match[2] : null;
+        if (videoID) {
+            document.getElementById('youtube-player').innerHTML = `<iframe width="100%" height="100%" src="https://www.youtube.com/embed/${videoID}?autoplay=1" frameborder="0" allowfullscreen></iframe>`;
+            document.getElementById('youtube-container').style.display = 'block';
         }
     };
     document.getElementById('close-youtube-btn').onclick = () => document.getElementById('youtube-container').style.display = 'none';
 
+    window.onload = () => { loadHighScore(); loadYouTubeAPI(); resetRound(); };
 </script>
 </body>
 </html>
+
+```
