--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <tbody id="leaderboard-body">
                 <tr class="border-b border-gray-800 text-yellow-400">
                     <td class="py-1 w-8 text-center">1ST</td>
-                    <td class="py-1">PLACEHOLDER_NAME_1</td>
-                    <td class="py-1 text-right">$500,000</td>
+                    <td class="py-1">Josh</td>
+                    <td class="py-1 text-right">$508,750</td>
                 </tr>
                 <tr class="border-b border-gray-800 text-gray-300">
                     <td class="py-1 w-8 text-center">2ND</td>
@@ -105,16 +105,6 @@
                     <td class="py-1 w-8 text-center">3RD</td>
                     <td class="py-1">PLACEHOLDER_NAME_3</td>
                     <td class="py-1 text-right">$100,000</td>
-                </tr>
-                <tr class="border-b border-gray-800 text-gray-400">
-                    <td class="py-1 w-8 text-center">4TH</td>
-                    <td class="py-1">PLACEHOLDER_NAME_4</td>
-                    <td class="py-1 text-right">$50,000</td>
-                </tr>
-                <tr class="text-gray-500">
-                    <td class="py-1 w-8 text-center">5TH</td>
-                    <td class="py-1">PLACEHOLDER_NAME_5</td>
-                    <td class="py-1 text-right">$25,000</td>
                 </tr>
             </tbody>
         </table>
