--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div> 
     <div class="flex-shrink-0 mt-2 bg-gray-900 rounded-xl border-2 border-yellow-500 overflow-hidden">
     <div class="bg-yellow-500 py-1">
-        <h3 class="text-center font-black text-gray-900 text-xs uppercase tracking-widest">Global Hall of Fame</h3>
+        <h3 class="text-center font-black text-gray-900 text-xs uppercase tracking-widest">Top Daves</h3>
     </div>
     
     <div class="p-2 max-h-32 overflow-y-auto custom-scrollbar">
